ec2.tf
resource "aws_instance" "web" {
  ami                    = data.aws_ami.al2023.id
  instance_type          = "t3.micro"

  subnet_id              = var.subnet_id
  vpc_security_group_ids = [var.security_group_id]

  iam_instance_profile   = "EC2SSMRole"

  tags = {
    Name = "t3-web-ssm"
  }
}
